# Yamaha-TF-Control

./: .flake8  .pre-commit-config.yaml  .prettierrc.yaml  LICENSE  README.md  example.qlab4  fade.py  fadeDCA.py  pyproject.toml  recallScene.py  server.py
control/: __init__.py  __main__.py  arguments.py  fadeDCA.py  recallScene.py  setMuteMaster.py  version.py
scripts/: fadeDCA.py  muteInput.py  recallScene.py  setMuteMaster.py
