[tool.poetry]
name = "yamaha-desk-control"
version = "1.0.0"
description = "A module to control various Yamaha Audio Consoles"
authors = ["Dom Chester <dom.chester@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yamaha_desk_control"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
yamaha-control = 'control:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["scripts"]
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.mypy]
ignore_missing_imports = true
